<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- Notification -->

    <string name="note_title">Intel® Connect Center</string>

    <!-- General / Common -->

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="general_wait">Please wait&#8230;</string>
    <string name="continue_button_label">Continue</string>
    <string name="general_name">Name:</string>
    <string name="unable_start_camera">Unable to start the camera!</string>
    <string name="could_not_open_image">Sorry, unable to open that image.</string>
    <string name="general_register_now">Register this device now?</string>
    <string name="avatar_description">avatar</string>
    <string name="error_gallery_not_stored_picture">Operation failed. Online images cannot be selected. Please download image to this device.</string>
    <!-- 
    <string name="online_image_detection">content://com.google.android.gallery3d</string> -->

    <!-- Reauthentication notification -->

    <string name="notification_renew_registration">Renew Registration</string>
    <string name="notification_reauthen_body">Your Intel® Connect Center credentials for this device are about to expire. Please click or tap here to re-register this device.</string>
    <string name="reauthen_not_expired_body">This device’s registration with Intel® Connect Center is about to expire. Registration certifies your identity to other users. Internet connection is required to register.</string>
    <string name="reauthen_expired_body">Your Intel® Connect Center Credentials for this device have expired.  Please register this device.</string>

    <!-- New Unboxing -->


    <!-- Start Up Page -->
    <string name="start_up_page_message">Adding this device to your Intel® Identity Services account will enable you to connect to other devices over the Internet and to securely connect to your own devices.  Also, this device will be assigned a unique security identifier.</string>
    <string name="start_up_page_create_account_button_label">Create an account</string>
    <string name="start_up_page_sign_in_button_label">Sign In</string>
    <string name="start_up_page_skip_sign_in_button_label">Skip Sign In</string>

    <!-- Enter Name Page -->
    <string name="enter_screenname_header">Enter Screen Name</string>
    <string name="enter_screenname_message">This is the name you will be seen as.</string>
    <string name="enter_screenname_screen_name_label">Screen Name:</string>
    <string name="enter_screenname_screen_name_hint">Screen Name</string>
    <string name="enter_screenname_screen_name_desc">You can enter a nickname or your real name. This name will be shown to other people running Intel® Connect Center.</string>

    <!-- Choose avatar page -->
    <string name="choose_avater_header">Choose your profile picture</string>
    <string name="choose_avater_message">Choose a profile picture to represent you. You can choose one of the pictures shown here, or browse to select your own custom picture. This profile picture will be shown to other people running Intel® Connect Center.</string>
    <string name="choose_avater_gallery_button_label">Browse for a picture</string>
    <string name="choose_avater_camera_button_label">Take a photo</string>
    <string name="choose_avatar_error_gallery_not_stored_picture_title">Profile Picture</string>
    <string name="choose_avatar_error_gallery_not_stored_picture">Please copy the picture to the local storage before choosing as an avatar or choose from local storage.</string>

    <!-- Enter Device Name Page -->
    <string name="enter_device_name_header">Enter Device Name</string>
    <string name="enter_device_name_label">Device Name:</string>
    <string name="enter_device_name_hint">Device Name</string>
    <string name="enter_device_name_done_button_label">Done</string>

    <!-- Successful Page -->
    <string name="successful_header">Successful</string>
    <string name="successful_ok_button_label">OK</string>
    
    <!-- Old Registration Strings -->
    <string name="nu_title_registration">Registration</string>
    <string name="nu_text_registration">Registering provides for a more secure experience while using Intel® Connect Center.</string>
    <string name="nu_sub_text_registration">An Internet connection is required to complete registration.</string>
    <string name="nu_sub_button1">Register Now</string>
    <string name="nu_sub_button2">Register Later</string>
    <string name="nu_sub_button3">Unregister</string>
    <string name="nu_title_verify">Verifying your Internet connection</string>
    <string name="nu_no_internet">Unable to Connect to Intel® Identity Services.</string>
    <string name="nu_title_sign_in">Sign in</string>
    <string name="nu_title_registering">Registering</string>

    <!-- Cloud and Unboxing -->

    <string name="unboxing_name">Let people in the area know who you are. \nIntel® Connect Center will show this name to people in the area, so they can invite you to play games and run apps together.</string>
    <string name="unboxing_avatar">Add a profile picture that represents you. \nPeople in the area will see this picture, and they\'ll be able to find you more quickly.</string>
    <string name="unboxing_selectPicture">Select Profile Picture</string>        
    
    <string name="unboxing_getStarted">Get Started</string>
    <string name="unboxing_insert_username">Enter Username&#8230;</string>
    <string name="cloud_reauthenticate">Reauthenticate Your Device</string>
    <string name="cloud_no_connection_new">Unable to contact Intel® Identity Services.  Please make sure that you have an internet connection and that your firewall is properly configured.</string>
    <string name="cloud_signing_in_title">Signing In&#8230;</string>
    
    <!--  Cloud Error Strings -->
    <string name="cloud_error_header">Registration Failed</string>       
    <string name="cloud_error_message1" tools:ignore="Typos">Unable to connect to the Internet.</string>
    <string name="cloud_error_message2" tools:ignore="Typos">Please make sure that you have an Internet Connection.</string>
    <string name="cloud_error_try_again_button_label">Try Again</string>    
	<string name="cloud_error_no_internet_header" tools:ignore="Typos">No Internet Connection</string>
	<string name="cloud_error_description" tools:ignore="Typos">No Internet Connection</string> 
	
    <!-- StarterActivity -->

    <string name="pending">Checking for Platform &#8230;</string>
    <string name="ok">OK</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_username_text">Your username must contain at least one valid character.</string>

    <!-- Update User Details -->

    <string name="profile_insert_username">Enter Username&#8230;</string>
    <string name="profile_insert_status">Enter Status Message&#8230;</string>
    <string name="app_name">Peer to Poker Table</string>
    <string name="app_description">Simple chat app description.</string>
    <string name="notification_text">has invited you to simple chat.</string>
    <string name="timeout_toast_text">Invitation to simplechat has timed out.</string>
    <string name="schat_inv_text">%s invited you to Chat.</string>
    <string name="title_activity_friend_initiator">FriendInitiatorActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Do you want invite</string>
    
     <!-- FriendInviteActivity -->
     
    <string name="friend_receive_invitation_received" tools:ignore="Typos"> %1$s wants to be your friend. Friends can connect to each other over the Internet.</string>
    <string name="friend_receive_invitation_accepted_error_occurred"> Could not complete friend request. %1$s may not be available.</string>
    <string name="accept_button_text">Accept</string>
    <string name="ignore_button_text">Ignore</string>
    <string name="ok_button_text">OK</string>
	<string name="friendsendinvitationmsg_makingfriendrequest">Asking %1$s to be your friend...</string>
	<string name="friendsendinvitationmsg_erroroccurred">Could not make %1$s your friend.  Try later.</string>
	<string name="friendsendinvitationmsg_friendrequestacceptedregisteringwithserver">Making friends with %1$s...</string>
	<string name="friendsendinvitationmsg_friendrequestnotaccepted">Could not complete friend request. %1$s may not be available.</string>
	<string name="friendsendinvitationmsg_nolocalinternetconnection" tools:ignore="Typos">You do not have an Internet connection.  An Internet connection is required to make friends.</string>
	<string name="friendsendinvitationmsg_preconfirmsendinvitation">Would you like to invite %1$s to be your friend?</string>
	<string name="friendsendinvitationmsg_serverregistrationsucceededfriendsmade">You and %1$s are now friends</string>
	<string name="msgdlg_okbtntext">OK</string>
	<string name="msgdlg_cancelbtntext">Cancel</string>
	<string name="msgdlg_yesbtntext">Yes</string>
	<string name="msgdlg_nobtntext">No</string>
	<string name="friendreceiveinvitationmsg_errorafteracceptinginvitation">Could not make %1$s your friend.  Try later.</string>
	<string name="friendreceiveinvitationmsg_invitationaccepted">Making friends with %1$s...</string>
	<string name="friendreceiveinvitationmsg_invitationreceived" tools:ignore="Typos">%1$s wants to be your friend. Friends can connect to each other over the Internet.</string>
	<string name="friendreceiveinvitationmsg_registrationsucceededfriendsmade">You and %1$s are now friends</string>
	<string name="friendreceiveinvitation_title">Received Friend Invitation</string>
	<string name="friendsendinvitation_title">Sent Friend Invitation</string>
	<string name="friendsendinvitationmsg_noremoteinternetconnection" tools:ignore="Typos">Could not make %1$s your friend.  %1$s does not have an Internet connection. Try later.</string>
	<string name="friendsendinvitationmsg_serverregistrationsucceededfriendsmade1">Could not make %1$s your friend.  Try later.</string>
	<string name="friendreceiveinvitationmsg_nointernet" tools:ignore="Typos">You do not have an Internet connection.  An Internet connection is required to make friends.</string>
	<string name="msgdlg_acceptbtntext">Accept</string>
	<string name="msgdlg_ignorebtntext">Ignore</string>
	<string name="msgdlg_retrybtntext">Retry</string>
    
    </resources>