<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/blue"> 
        
    <ScrollView
        android:id="@+id/startuppagescrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"       
        android:fillViewport="true" >
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:orientation="vertical" >
        
		    <TextView
		        android:id="@+id/start_up_message"        
		        android:text="@string/start_up_page_message"
		        style="@style/MainMessageTextStyle"	
		        android:textSize="30sp"/>
		    
		    <Button
		        android:id="@+id/create_account_button"
		        android:text="@string/start_up_page_create_account_button_label"	        
		        style="@style/ButtonStyle" 
		        android:layout_marginTop="50dip"/>
		        
		    <Button
		        android:id="@+id/sign_in_button"
		        android:text="@string/start_up_page_sign_in_button_label"	        
		        style="@style/ButtonStyle" 
		        android:layout_marginTop="35dip"/>
		    
		    <Button
		        android:id="@+id/skip_sign_in_button"
		        android:text="@string/start_up_page_skip_sign_in_button_label"	        
		        style="@style/ButtonStyle"       
		        android:layout_marginTop="35dip" /> 
		        
           </LinearLayout>
    </ScrollView>  
</RelativeLayout>