<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center"
    android:orientation="vertical" >
    
    <ScrollView
        android:id="@+id/cloud_error_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"        
        android:fillViewport="true" >
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:orientation="vertical" >
            
		    <TextView
		        android:id="@+id/cloud_error_title"
		        android:text="@string/cloud_error_header"
		        style="@style/HeaderTextStyle" />		        
		
		    <ImageView
                android:id="@+id/cloud_error_image"
                android:contentDescription="@string/cloud_error_description"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/message_warning_icon" />
				    
		        
		    <TextView
		        android:id="@+id/cloud_error_message2"
		        android:text="@string/cloud_error_message2"
		        android:layout_marginTop="20dp"
		        style="@style/MainMessageTextStyle" />
		    
		    <Button
		        android:id="@+id/cloud_error_try_again_button"
		        style="@style/ButtonStyle"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"	        
		        android:text="@string/cloud_error_try_again_button_label" />
        
	        <Button
		        android:id="@+id/cloud_error_skip_sign_in_button"
		        android:text="@string/start_up_page_skip_sign_in_button_label"
		        style="@style/ButtonStyle"
		        android:layout_marginTop="20dp"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
        
		    <!-- 
		    
		    <TextView
		        android:id="@+id/cloud_error_message1"
		        android:text="@string/cloud_error_message1"
		        android:layout_marginTop="20dp"
		        style="@style/MainMessageTextStyle" /> 
		    <TextView
		        android:id="@+id/cloud_progress_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dp"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:gravity="center"
		        android:maxWidth="450dp"
		        android:text="@string/nu_title_verify"
		        android:textColor="@color/white"
		        android:textSize="26sp" />
		        
		        <ProgressBar
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="center" />
		        
		        <TextView
		        android:id="@+id/cloud_progress_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="20dp"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:gravity="center"
		        android:maxWidth="450dp"
		        android:text="@string/general_wait"
		        android:textColor="@color/white"
		        android:textSize="12sp" />     

<LinearLayout 
        android:id="@+id/unboxing_cloud_error_buttons"  
        android:background="@color/red"      
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"         
        android:orientation="horizontal">
        
        <Button
	        android:id="@+id/cloud_error_try_again_button"
	        style="@style/ButtonStyle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	        
	        android:text="@string/cloud_error_try_again_button" />
        
        <Button
	        android:id="@+id/cloud_error_skip_sign_in_button"
	        style="@style/ButtonStyle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	        
	        android:text="@string/cloud_error_try_again_button" />
        
    </LinearLayout>  
		        
		     -->
     	</LinearLayout>
     </ScrollView>
</RelativeLayout>